# eventiq-fastapi

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
eventiq_fastapi/: __init__.py  asyncapi.py  dependencies.py  healthcheck.py  lifespan.py
examples/: app.py
tests/: conftest.py  test_app.py
